verify implemented, might have probs with cast maybe not idk
so vai dar para ver se funciona qnd tivermos td mas a logica ta la ig

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "socket.h": "c",
-        "types.h": "c"
+        "types.h": "c",
+        "tree_skel.h": "c"
     }
 }
