funcional mas n funciona com mais de 1 server
da seg fault no server quando outro se liga

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "message-private.h": "c",
         "server_structs-private.h": "c",
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "client_stub-private.h": "c"
     }
 }
